Demo application to connect to logger in a multitask controller
git-svn-id: http://gs7008.sp.cs.cmu.edu/svn/oad@7 8cc6523e-86b4-5046-9b58-28433114b40b

--- a/2-Interpreter/oad_cpp/makefile
+++ b/2-Interpreter/oad_cpp/makefile
@@ -36,7 +36,10 @@ doc: $(LIB)
 
 
 #sample programs
-samples: $(LIB) $(SDIR)/basicDemo/basicDemo
+samples: $(LIB) $(SDIR)/basicDemo/basicDemo $(SDIR)/multitaskDemo/multitaskDemo clean
 
 $(SDIR)/basicDemo/basicDemo:
 	make -C $(SDIR)/basicDemo
+
+$(SDIR)/multitaskDemo/multitaskDemo:
+	make -C $(SDIR)/multitaskDemo
