--- a/2-Interpreter/oad_cpp/samples/basicDemo/makefile
+++ b/2-Interpreter/oad_cpp/samples/basicDemo/makefile
@@ -4,15 +4,6 @@ CXX      = g++
 CPPFLAGS = -O2 -Wall -ansi
 ODIR     = bin
 
-UNAME := $(shell uname)
-
-ifeq ($(UNAME), Darwin)
-# If mac, SFML is linked differently
-SFML_LIBS = -framework sfml-network -framework sfml-system
-else
-# Link libraries normally in linux
-SFML_LIBS = -lsfml-network -lsfml-system
-endif
 
 .PHONY: clean
 
@@ -20,7 +11,7 @@ endif
 all: $(ODIR)/basicDemo 
 
 $(ODIR)/basicDemo: $(OBJS) src/basicDemo.cpp
-	$(CXX) $(CPPFLAGS) -o $(ODIR)/basicDemo src/basicDemo.cpp $(SFML_LIBS) -load -L../../lib -I../../include
+	$(CXX) $(CPPFLAGS) -o $(ODIR)/basicDemo src/basicDemo.cpp -load -L../../lib -I../../include
 
 clean:
 	rm -f $(ODIR)/basicDemo
